# ih-cnn-image-classification

./: .gitignore  README.md  cifar10_presentation.pptx  main.ipynb  pyproject.toml
models/cnn_cifar10/: 6ef00fa3-71f6-46fe-b1ab-8c9dc91db350_history.json
models/mnv2_cifar10/: a62872cb-3774-418a-95a2-fa27210d2adf_history.json
src/ih_cnn/: __init__.py  models.py  utils.py
