[project]
name = "ih-cnn-image-classification"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11, <3.12"
dependencies = [
    "jinja2>=3.1.6",
    "pandas>=3.0.1",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
    "tensorflow==2.16.2",
    "tensorflow-metal==1.1.0",
]

[tool.uv]
package = true
